Bug 89001 - iwlwifi dvm: WARNING - reg_process_hint: net/wireless/reg.c:1806 - MWG100223400
Summary: iwlwifi dvm: WARNING - reg_process_hint: net/wireless/reg.c:1806 - MWG100223400
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_network-wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-28 16:32 UTC by AS
Modified: 2014-12-12 12:43 UTC (History)
5 users (show)

See Also:
Kernel Version: 3.17.4-1-ARCH
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg log of error (5.85 KB, text/plain)
2014-11-28 16:32 UTC, AS
Details
another dmesg log (2.77 KB, text/plain)
2014-11-30 18:04 UTC, Yuval Adam
Details

Description AS 2014-11-28 16:32:17 UTC
Created attachment 159021 [details]
dmesg log of error

When I connect to a wireless network, I get a crash on the iwlwifi module almost every time. This also happens irregularly while I'm already connected to a wireless LAN.
Additionally I sometimes get "fail to flush tx queue" errors, but far less frequently. Latter error seems to be the same as reported here: https://bugzilla.kernel.org/show_bug.cgi?id=56581

Every time 1 second before the crash, this line gets logged:
cfg80211: Calling CRDA for country: DE
Not sure if that's related.

I'm using a Thinkpad x220 with an "Intel Corporation Centrino Advanced-N 6205" wireless controller.

There is also an entry on the Arch Linux bugtracker with additional logs and information: https://bugs.archlinux.org/task/41906
Comment 1 Emmanuel Grumbach 2014-11-29 20:08:42 UTC
I'll check the regulatory thing - but that's in mac80211. I don't remember right now if we have a fix for this.

Regarding "fail to flush tx queue", the fix has been merged in 3.17.3 upstream. I don't know how that maps to ARCH linux kernels but I'd be very surprised if 3.17.4-1-ARCH wouldn't have that commit...

In any case, unfortunately, there isn't much more I can do for that bug.
Comment 2 Yuval Adam 2014-11-30 18:03:37 UTC
Same error here on a system with this wireless device:

    01:00.0 Network controller: Qualcomm Atheros QCA9565 / AR9565 Wireless Network Adapter (rev 01)

Attaching relevant dmesg log.
Comment 3 Yuval Adam 2014-11-30 18:04:11 UTC
Created attachment 159221 [details]
another dmesg log
Comment 4 Emmanuel Grumbach 2014-12-02 07:59:25 UTC
Patch published:
https://patchwork.kernel.org/patch/5417441/

I am leaving this bug open until the patch gets merged.
Comment 5 Alfred Krohmer 2014-12-02 12:39:57 UTC
If I unterstand your patch correctly it just removes the warning, but it won't actually fix the driver crash this bug report was submitted for. So why mark it as resolved?
Comment 6 Emmanuel Grumbach 2014-12-02 13:45:05 UTC
There is no real bug. The commit message explains this.
Comment 7 Emmanuel Grumbach 2014-12-02 20:23:57 UTC
FYI - this patch has been ACKed by the maintainer of the relevant code.
Comment 8 Emmanuel Grumbach 2014-12-12 12:43:12 UTC
patch was applied.

Note You need to log in before you can comment on or make changes to this bug.